; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_sch_htb.c_htb_qlen_notify.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_sch_htb.c_htb_qlen_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32 }
%struct.htb_class = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Qdisc*, i64)* @htb_qlen_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @htb_qlen_notify(%struct.Qdisc* %0, i64 %1) #0 {
  %3 = alloca %struct.Qdisc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.htb_class*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = inttoptr i64 %6 to %struct.htb_class*
  store %struct.htb_class* %7, %struct.htb_class** %5, align 8
  %8 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %9 = call i32 @qdisc_priv(%struct.Qdisc* %8)
  %10 = load %struct.htb_class*, %struct.htb_class** %5, align 8
  %11 = call i32 @htb_deactivate(i32 %9, %struct.htb_class* %10)
  ret void
}

declare dso_local i32 @htb_deactivate(i32, %struct.htb_class*) #1

declare dso_local i32 @qdisc_priv(%struct.Qdisc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
